fix: height issue on mobile devices

--- a/src/styles.css
+++ b/src/styles.css
@@ -209,3 +209,12 @@ body {
     padding: 2rem 6rem;
   }
 }
+
+@media only screen and (min-width: 720px) {
+  body {
+    height: 100dvh;
+  }
+  .quiz {
+    min-height: 100dvh;
+  }
+}
